packages/itwinui-css/src/file-upload/file-upload.scss
// Copyright (c) Bentley Systems, Incorporated. All rights reserved.
// See LICENSE.md in the project root for license terms and full copyright notice.
@import '../utils/index';
@import '../surface/index';

@mixin iui-file-upload {
  @include iui-reset;
  font-size: var(--iui-font-size-1);
  font-weight: var(--iui-font-weight-normal);
  position: relative;
  display: flex;
  line-height: normal;

  > .iui-content {
    visibility: hidden;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    user-select: none;
    padding: calc(var(--iui-size-s) * 0.5) var(--iui-size-s);
    background-color: var(--iui-color-background-backdrop);
    border: 1px solid var(--iui-color-background-backdrop);
    border-radius: var(--iui-border-radius-1);

    .iui-browse-input {
      width: 0.1px;
      height: 0.1px;
      opacity: 0;
      overflow: hidden;
      position: absolute;
    }

    > svg,
    .iui-template-icon {
      @include iui-icon-style('xl');
      @include iui-icon-color;
      margin-top: var(--iui-size-s);
      margin-bottom: var(--iui-size-s);
    }

    &:only-child {
      visibility: visible;
      position: relative;
      flex-direction: row;

      &:focus-within {
        outline: 2px solid var(--iui-color-text-accent);
        outline-offset: -2px;
      }
    }

    .iui-template-text {
      margin-left: var(--iui-size-l);

      > label {
        font-weight: var(--iui-font-weight-bold);
      }
    }
  }

  &.iui-drag {
    .iui-file-card-icon > svg,
    .iui-file-card-empty-icon > svg {
      fill: var(--iui-color-icon-accent);
    }

    > .iui-content {
      visibility: visible;
    }

    > .iui-content,
    .iui-file-card {
      background-color: var(--iui-color-background-accent-muted);
      border-color: var(--iui-color-border-accent);
      color: var(--iui-color-text-accent);

      > svg,
      .iui-template-icon {
        fill: var(--iui-color-icon-accent);
      }
    }
  }
}

@mixin iui-file-card {
  @include iui-reset;
  @include iui-surface;
  width: 100%;
  line-height: normal;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: calc(var(--iui-size-s) * 0.5) var(--iui-size-s);
  border-radius: var(--iui-border-radius-1);

  &:focus-within {
    outline: 2px solid var(--iui-color-text-accent);
    outline-offset: -2px;
  }

  > svg {
    @include iui-icon-style('xl');
    @include iui-icon-color;
    margin-top: var(--iui-size-s);
    margin-bottom: var(--iui-size-s);
    margin-left: var(--iui-size-xs);
  }
}

@mixin iui-file-card-icon {
  > svg {
    @include iui-icon-style('xl');
    @include iui-icon-color;
    margin-top: var(--iui-size-s);
    margin-bottom: var(--iui-size-s);
    margin-left: var(--iui-size-xs);
  }
}

@mixin iui-file-card-text {
  margin: 0 var(--iui-size-s);
  display: flex;
  flex-direction: column;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

@mixin iui-file-card-title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

@mixin iui-file-card-description {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: var(--iui-font-size-0);
  color: var(--iui-color-text-muted);
}

@mixin iui-file-card-action {
  margin-left: auto;
  margin-right: var(--iui-size-xs);
  font-weight: var(--iui-font-weight-bold);
}

@mixin iui-file-card-empty {
  @include iui-reset;
  width: 100%;
  line-height: normal;
  display: flex;
  flex-direction: row;
  align-items: center;

  font-size: var(--iui-font-size-1);
  font-weight: var(--iui-font-weight-normal);
  position: relative;

  justify-content: center;
  user-select: none;
  padding: calc(var(--iui-size-s) * 0.5) var(--iui-size-s);
  border-radius: var(--iui-border-radius-1);

  &:focus-within {
    outline: 2px solid var(--iui-color-text-accent);
    outline-offset: -2px;
  }
}

@mixin iui-file-card-empty-icon {
  > svg {
    @include iui-icon-color;
    @include iui-icon-style('xl');
    margin-top: var(--iui-size-s);
    margin-bottom: var(--iui-size-s);
  }
}

@mixin iui-file-card-empty-action {
  margin-left: var(--iui-size-l);

  > label {
    font-weight: var(--iui-font-weight-bold);
  }
}

